--- a/index.html
+++ b/index.html
@@ -441,6 +441,7 @@
             </div>
             <ul class="nav-menu" id="navMenu">
                 <li><a href="index.html" class="active">Accueil</a></li>
+                <li><a href="chateau.html">Château</a></li>
                 <li><a href="nos-espaces.html">Nos Espaces</a></li>
                 <li><a href="tarifs.html">Tarifs</a></li>
                 <li><a href="galerie.html">Galerie</a></li>
