--- a/nos-espaces.html
+++ b/nos-espaces.html
@@ -370,6 +370,7 @@
             </div>
             <ul class="nav-menu" id="navMenu">
                 <li><a href="index.html">Accueil</a></li>
+                <li><a href="chateau.html">Château</a></li>
                 <li><a href="nos-espaces.html" class="active">Nos Espaces</a></li>
                 <li><a href="tarifs.html">Tarifs</a></li>
                 <li><a href="galerie.html">Galerie</a></li>
