--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
         <div class="hero-content">
             <h1>Votre Mariage de Rêve</h1>
             <p>Dans un cadre historique d'exception</p>
-            <a href="contact.html" class="cta-button">Découvrir le Domaine</a>
+            <a href="chateau.html" class="cta-button">Découvrir le Château</a>
         </div>
     </div>
 
